# JSONifyXML

./: .gitignore  README.md  main.py  paths.py  pyproject.toml
JSONifyXML/parser/: interpreter.py  validator.py  xml_parse_to_json.py
JSONifyXML/parser/helpers/: decode_bytes.py  format_lines.py
assets/xml_examples/: example01.xml
helpers/: create_json.py  file_opener.py  find_all_chars.py  generate_xml.py  lifo.py
parser/: interpreter.py  tag.py  validator.py
utils/: main.py  paths.py
utils/helpers/: file_opener.py  get_file_size.py
validator/: interpreter.py  tag.py  validator.py
xml_examples/: example02.xml  example03.xml
