[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "JSONifyXML"
version = "0.2.0"
authors = [
  { name="Mohamed", email="mohamed.moussati.lamhamdi@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]